tests/models/enum/unnamed/i64/fail/alias.rs
use dade::model;
#[model]
enum TestModel {
    Value(
       #[field(alias = "val")]
        i64
    ),
}
fn main() {}
